Bunch of fixes relating to discriminators